# aurora_ws

./: .gitignore  README.md
src/aurora_remote_public/: version.txt
src/aurora_remote_public/include/: aurora_pubsdk_common_def.h  aurora_pubsdk_inc.h  aurora_pubsdk_objects.h
src/aurora_remote_public/include/cxx/: slamtec_remote_objects.hxx  slamtec_remote_public.hxx
src/aurora_remote_public/lib/win64/: slamtec_aurora_remote_sdk.lib
src/py_srvcli/: package.xml  setup.py
src/py_srvcli/py_srvcli/: map_set_sync_script.py
src/slamware_ros_sdk/: CMakeLists.txt  package.xml
src/slamware_ros_sdk/include/slamware_ros_sdk/: slamware_ros_sdk_client.h
src/slamware_ros_sdk/launch/: slamware_ros_sdk_server_and_view.xml  slamware_ros_sdk_server_node.xml  view_slamware_ros_sdk_server_node.xml
src/slamware_ros_sdk/msg/: ClearMapRequest.msg  SystemStatus.msg
src/slamware_ros_sdk/rviz/: slamware_ros_sdk_server_node.rviz
src/slamware_ros_sdk/src/client/: slamware_ros_sdk_client.cpp  slamware_ros_sdk_client_node.cpp
src/slamware_ros_sdk/src/server/: geometry_rectangle.h  server_map_holder.cpp  server_map_holder.h  server_params.cpp  server_params.h  server_work_data.cpp  server_work_data.h  server_worker_base.cpp  server_worker_base.h  server_workers.cpp  server_workers.h  slamware_ros_sdk_server.cpp  slamware_ros_sdk_server.h  slamware_ros_sdk_server_node.cpp
src/slamware_ros_sdk/srv/: RelocalizationRequest.srv  SyncGetStcm.srv  SyncSetStcm.srv
